# ttysys

./: .cproject  .gitignore  .project  Makefile  README.md  main.c  meson.build
src/: common.c  common.h  cpuInfo.c  cpuInfo.h  main.c  memInfo.c  memInfo.h  ncurses-help.c  ncurses-help.h  signals.c  signals.h  ttysys_api.c  ttysys_api.h  ttysys_export_list.txt  windowlist.c  windowlist.h
src/libs/: cpu.c  cpu.h  mem.c  mem.h  net.c  net.h  val.c  val.h  watch.c  watch.h
